--- a/starting-point.html
+++ b/starting-point.html
@@ -20,6 +20,7 @@
 
     <div class="header">
       <h1>Responsive Design and Fluid Layouts</h1>
+      <h1>HELLO PETER</h1>
       <h3>Description about the site here</h3>
       <h4>By: Your Names here!</h4>
     </div>
