--- a/starting-point.html
+++ b/starting-point.html
@@ -10,7 +10,7 @@
       <nav class="responsive-navbar">
         <ul>
         <!-- <li id="logo"><h1><a href="starting-point.html"><span style="font-family: monogly; font-size: 4em; padding-top:30px;">RDKP</span></a><h1></li> -->
-          <li id="logo"><a href="starting-point.html"><img style="width: 180px;" src="img/logo3.png"></a></li>
+          <li id="logo"><a href="starting-point.html"><img style="width: 180px;" src="img/logo.png"></a></li>
           <li><h3><a href="starting-point.html">Home</a></h2></li>
           <li><h3><a href="http://klaoha06.github.io/">Korn's Git</a></h3></li>
           <li><h3><a href="http://kprakobkit.github.io/">Peter's Git</a></h3></li>
