add content to conclusion section and modify style

--- a/starting-point.html
+++ b/starting-point.html
@@ -84,9 +84,9 @@
     </div>
     <div class="clear your-conclusion">
       <h2>Your Conclusion</h2>
-      Discuss the purpose of responsive design and fluid layouts and whether
-      you think it's good practice to use them
-      Add html tags where necessary.
+      <p>
+        Responsive design is now more important than ever. With the proliferation of different media screens and outlets, web designers need to take into account all the different venues that the user may view their content. Instead of designing multiple versions for different devices, the designer can use the responsive design approach to create content that will adapt to the user's environment and context. This ultimately allows the designer to work more efficiently, while providing more value for the end user.
+      </p>
     </div>
       <hr/>
 
